--- a/MemoryAccess/imgui.ini
+++ b/MemoryAccess/imgui.ini
@@ -3,7 +3,7 @@ Pos=60,60
 Size=585,475
 
 [Window][Dear ImGui Demo]
-Pos=482,21
+Pos=537,37
 Size=550,680
 
 [Window][Dear ImGui Demo/ResizableChild_D5443E47]
@@ -13,4 +13,20 @@ Size=499,136
 [Window][Dear ImGui Demo/Red_1D4E05CE]
 IsChild=1
 Size=200,100
+
+[Window][Example: Documents]
+Pos=451,14
+Size=621,714
+
+[Window][Save?]
+Pos=487,269
+Size=305,181
+
+[Window][Delete?]
+Pos=484,307
+Size=311,105
+
+[Window][Calculator]
+Pos=512,298
+Size=256,123
 
